--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     
 
-    <title>Mini App</title>
+    <title>Currency Conversion App</title>
 
 <!DOCTYPE html>
 <html lang="en">
